# camel

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  _pyproject.toml  docker-compose.yaml  pyproject.toml  vulture_whitelist.py
.github/workflows/: ci-cd.yaml  mirror-codeberg.yaml
.specify/: extensions.yml
.specify/extensions/: .registry
.specify/extensions/.cache/: catalog-ebf165086500aab1-metadata.json  catalog-ebf165086500aab1.json  catalog-metadata.json
.specify/integrations/: gemini.manifest.json  speckit.manifest.json
.specify/memory/: branches.md  constitution.md  dataset_structure.md  ds.md  research-xai-metrics.md
.specify/presets/: .registry
.specify/presets/.cache/: catalog-ff86b51b80a289e5-metadata.json  catalog-ff86b51b80a289e5.json  catalog-metadata.json
.specify/workflows/: workflow-registry.json
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/bronze/: stg_raw_dataset.sql
dbt/models/gold/: fct_evaluation_scores.sql  fct_inference_results.sql
dbt/models/silver/: int_filtered_dataset.sql
docs/: tasks.md
prompts/: system_prompt.j2
results/: predictions.csv
specs/001-weni-eval-pipeline/: quickstart.md  tasks.md
src/camel/: dbt_project.yml
tests/: conftest.py
tests/integration/: test_derive_thresholds.py  test_duckdb_dataset.py  test_e2e_pipeline.py  test_mlflow_scorer.py  test_mlflow_tracker.py  test_openai_agent.py  test_statistical_verdict_pipeline.py
tests/unit/application/: test_export_results.py  test_run_evaluation.py  test_run_inference.py  test_run_pipeline.py
tests/unit/domain/: test_aggregation.py  test_category_score_collection.py  test_effect_sizes.py  test_hypothesis_tests.py  test_metric_threshold.py  test_pass_at_k.py  test_prompt_renderer.py  test_scoring.py  test_statistical_verdict.py  test_threshold_derivation.py  test_threshold_profile.py
tests/unit/infrastructure/: test_cached_agent.py  test_judge_model_uri.py  test_litellm_tracing.py  test_mlflow_tracker_reuse.py  test_provider_validation.py  (+1 more)
(+75 files in other folders)
