[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/camel"]

[project]
name = "camel"
version = "0.1.0"
description = "AI Agent Evaluation Pipeline — batch inference, deterministic scorers, LLM-as-judge, MLflow tracking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.1",
    "datasets>=4.8.5",
    "dbt-core>=1.11.8",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.2",
    "jinja2>=3.1.6",
    "jsonschema>=4.26.0",
    "kaleido>=1.2.0",
    "litellm>=1.83.0",
    "mlflow>=3.11.1",
    "nltk>=3.9.4",
    "openai-agents[litellm]>=0.14.8",
    "plotly>=6.7.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.9.1",
    "rich>=13.6.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "streamlit>=1.57.0",
    "tiktoken>=0.12.0",
    "trulens-providers-litellm>=2.8.0",
    "typer>=0.25.1",
]

[project.scripts]
camel = "camel.infrastructure.cli.app:app"

[dependency-groups]
dev = [
    "autoflake>=2.3.3",
    "black>=25.12.0",
    "fastparquet>=2026.3.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "isort>=8.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "mypy>=1.19.1",
    "papermill>=2.7.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "seaborn>=0.13.2",
    "vulture>=2.16",
]

[tool.black]
line-length = 100
target-version = ["py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["camel"]

[tool.vulture]
min_confidence = 80
paths = ["src/camel"]

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
